--- a/style/intro.css
+++ b/style/intro.css
@@ -14,13 +14,12 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
-    width: 50%;
+    width: 45vw;
 }
-
 
 #intro-header {
     position: relative;
-    width: 75%;
+    width: 80%;
     font-size: 5vw;
     word-wrap: break-word;
     word-break: keep-all;
@@ -28,9 +27,9 @@
 
 #intro-introduction {
     position: relative;
-    width: 70%;
+    width: 80%;
     font-size: 20px;
-    margin-top: 40px;
+    margin-top: 20px;
     margin-bottom: 40px;
     word-wrap: break-word;
     word-break: keep-all;
@@ -61,14 +60,75 @@
     position: relative;
     display: inline-block;
     width: 30vw;
-    height: 75vh;
+    height: 80vh;
 }
 
-#intro-hero img{
+#intro-hero #desktop-img{
     position: relative;
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
-    
+    height: 100%;    
 }
+
+#intro-hero #mobile-img{
+    display: none; 
+}
+
+@media screen and (max-width: 700px) {
+    #main-body-wrapper {
+        display: flex;
+        flex-direction: column-reverse;
+        padding: 30px 0 0 0;
+    }  
+
+    #intro-hero {
+        position: relative;
+        display: flex;
+        width:100vw;
+        height: 40vh;
+        align-items: center;
+    }
+
+    #intro-hero #desktop-img{
+        display: none;
+    }
+    
+    #intro-hero #mobile-img{
+        position: relative;
+        left: 0;
+        top: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
+
+    #intro-wrapper {
+        justify-content:none;
+        align-items: center;
+        width: 100vw;
+        padding: 20px 10px 20px 10px;
+        text-align: center;
+    }
+
+    #intro-header {
+        width: 80%;
+        font-size: 7vw;
+        word-wrap: break-word;
+        word-break: keep-all;
+    }
+    
+    #intro-introduction {
+        width: 100vw;
+        font-size: 20px;
+        margin: 20px 0 20px 0;
+        word-wrap: break-word;
+        word-break: keep-all;
+        word-spacing: 0;
+    }
+
+    #intro-button button{
+        margin-bottom: 50px;
+    }
+    
+} 
