--- a/style/main.css
+++ b/style/main.css
@@ -8,9 +8,9 @@ ul,ol{
     list-style: none;
 }
 body{
-    overflow-x: hidden;
-    width: 100vmax;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(245, 245, 245);
 }
 
 .sub-title-font {
