--- a/style/nav.css
+++ b/style/nav.css
@@ -1,7 +1,6 @@
 #main-nav-wrapper{
     box-sizing: border-box;
     position: relative;
-    background-color: white;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -89,18 +88,73 @@
 }
 
 #menu-icon {
+    cursor: pointer;
     padding-top: 10px;
     display: none;
 }
 
 #side-nav-wrapper {
     display: none;
+    box-sizing: border-box;
+}
+
+#floating-options {
+    display: none;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    box-sizing: content-box;
+    padding: 10px;
+    background-color: white;
+    width: 100px;
+    height: 120px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 40px rgba(136, 136, 136, 0.425);
+    z-index: 6;
+}
+
+#floating-options li:hover {
+    color: black;
+    cursor: pointer;
+}
+
+#feature-todo::before {
+    content: url('../images/icon-todo.svg') '  ';
+    white-space: pre;
+}
+
+#feature-cal::before {
+    content: url('../images/icon-calendar.svg') '  ';
+    white-space: pre;
+}
+
+#feature-rem::before {
+    content: url('../images/icon-reminders.svg') '  ';
+    white-space: pre;
+}
+
+#feature-plan::before {
+    content: url('../images/icon-planning.svg') '  ';
+    white-space: pre;
+}
+#side-nav-wrapper{
+    /* display: inline-block; */
+    display: none;
+}
+
+#side-nav {
+    /* display: inline-block; */
+    display: none;
 }
 
 @media screen and (max-width: 700px) {
-    
     #main-nav-wrapper{
         padding: 20px 15px 0 15px;
+    }
+
+    #floating-options {
+        display: none;
     }
 
     #features {
@@ -117,24 +171,26 @@
 
     #side-nav-wrapper {
         position: fixed;
-        display: inline-block;
+        /* display: inline-block; */
+        display: none;
         width: 100vw;
         height: 100vh;
-        overflow: hidden;
         background-color: rgba(0, 0, 0, 0.453);
         z-index: 5;
     }
 
     #side-nav {
         position: absolute;
+        display: block;
         flex-direction: column;
         justify-content: start;
         box-sizing: border-box;
         padding: 30px;
         top:0;
         right: 0;
-        width: 60vw;
-        height: 100vh;
+        width: 60%;
+        height: 100%;
+        overflow-y: scroll;
         background-color: white;
         z-index: 5;
     }
@@ -163,7 +219,7 @@
     }
 
     #side-nav-register-btn {
-        width: 250px;
+        width: 100%;
         height: 45px;
         border-radius: 10px;
     }
@@ -174,7 +230,9 @@
         display: flex;
         justify-content: right;
     }
-
+    #side-feature-options, #side-company-options{
+        display: none;
+    }
     .side-company-option:hover, .side-feature-option:hover {
         color: black;
         cursor: pointer;
@@ -204,6 +262,5 @@
         content: '  ' url('../images/icon-planning.svg') '  ';
         white-space: pre;
     }
-
 
 } 
